=========
Changelog
=========

Here you can find the recent changes to libtmux

- :release:`0.6.1 <2016-12-20>`
- :support:`18` Fix logger, courtesy of @geekli
- :support:`19` Add support for ``start_directory`` in new sessions and
  panes, courtesy of @gandelman-a.
- :support:`-` Fix tests and add official support for 2.3

- :release:`0.6.0 <2016-09-16>`
- :support:`-` Raise exception for invalid session names. tmux does not
  allow names that are empty, contain periods or colons.
- :bug:`-` Remove unused ``target_sesssion`` param in
  ``Server.attach_session`` and ``Server.switch_client``.

- :release:`0.5.1 <2016-08-18>`
- :bug:`12` - fix logger message when tmux doesn't exist in ``PATH``

- :release:`0.5 <2016-06-15>`
- :feature:`8` new exception ``UnknownOption``
- :feature:`8` return ``None`` for options that are valid tmux options,
  but unset at that scope.
- :support:`6` major documentation overhaul

- :release:`0.4.1 <2016-05-23>`
- :support:`-` update ``which()`` to find tmux via ``os.environ['PATH']``.
  https://redd.it/4laeut

- :release:`0.4.0 <2016-05-23>`
- :support:`-` attributes for formatters are now accessible via
  ``Session``, ``Window`` and ``Pane`` objects. ``session.name``
  is equivalent to ``session.get('session_name')``, you can do the
  same with other properties in ``_info``. ``window.name``,
  ``pane.current_path``, ``session.id``, ``window.id``, ``pane.id``,
  ``session.index``, ``window.index``, ``pane.index``, etc.
- :support:`-` ``attached_sessions``, ``attached_window`` and
  ``attached_pane`` are now properties.
- :support:`-` ``_TMUX`` metadata object changed to ``_info``.
- :support:`-` ``.findWhere()`` is now ``find_where``.
- :support:`-` README and usage fixes

- :release:`0.3.0 <2016-05-23>`
- switch to pytest 

- :release:`0.1.0 <2016-05-22>`
- libtmux forked from `tmuxp`_.

.. _tmuxp: https://github.com/tony/tmuxp

.. # vim: set filetype=rst: