@@ -1,8 +1,8 @@
 __title__ = 'libtmux'
 __package_name__ = 'libtmux'
-__version__ = '0.6.1'
+__version__ = '0.6.3'
 __description__ = 'scripting library / orm for tmux'
 __email__ = 'tony@git-pull.com'
 __author__ = 'Tony Narlock'
 __license__ = 'BSD'
-__copyright__ = 'Copyright 2016 Tony Narlock'
+__copyright__ = 'Copyright 2016-2017 Tony Narlock'
