@@ -1,1 +1,1 @@
-pytest==3.0.5 # Updated from 3.0.4
+pytest==3.0.6 # Updated from 3.0.4
